--- a/user/templates/user/login/login.html
+++ b/user/templates/user/login/login.html
@@ -176,7 +176,7 @@ label:hover ~ input[type=password] {
   </p>
   </div>
   <p class="p-container">
-    <input type="submit" onclick="location.href='{% url 'login' %}'" name="go" id="go" value="Log in">
+    <input type="submit" name="go" id="go" value="Log in">
   </p>
 </form>
 </body>
