--- a/user/templates/user/login/login.html
+++ b/user/templates/user/login/login.html
@@ -158,7 +158,7 @@ label:hover ~ input[type=password] {
 
 </head>
 <body>
-<form method="post"  action="Server">
+<form method="post"  action="login">
   {% csrf_token %}
   <h1>User Log in</h1>
   <div class="inset">
