--- a/user/templates/user/login/reservation.html
+++ b/user/templates/user/login/reservation.html
@@ -1,6 +1,5 @@
-<form action="ServerReservation" method="post">
+<form action="server-reservation" method="post">
     {% csrf_token %}
-    <label for="your_name">Your name: </label>
-    <input id="your_name" type="text" name="your_name">
-    <input type="submit" value="OK">
+    {{ form }}
+    <input type="submit" value="Submit">
 </form>
