--- a/user/templates/user/login/dashboard.html
+++ b/user/templates/user/login/dashboard.html
@@ -1,1 +1,2 @@
-<button type="button" onclick="location.href='{% url 'available-server' %}'" class="btn btn-warning">Available Server</button>
+<button type="button" onclick="location.href='{% url 'available-server' %}'" class="btn btn-warning">Available Server
+</button>
