--- a/user/templates/user/login/available_server.html
+++ b/user/templates/user/login/available_server.html
@@ -10,6 +10,15 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
+
+    body {
+        background-color: #d5e1df;
+        align-items: center;
+        margin: 10px;
+        padding: 2rem 1.5rem;
+        font: 1rem/1.5 "PT Sans", Arial, sans-serif;
+        color: #5a5a5a;
+      }
         table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
@@ -33,8 +42,6 @@ tr:nth-child(even) {
 <body>
 <h2>Available Servers</h2>
 
-
-
 <table>
     <tr>
         <th>Server Name</th>
@@ -50,10 +57,7 @@ tr:nth-child(even) {
         <td>{{ data.available }}</td>
         <td>
             {% if data.available == True %}
-            <form method='post' action="Book">
-                {% csrf_token %}
-            <input  type="submit"  class="btn btn-success" name='internal-id' value="{{data.servername}}" ></input>
-            </form>
+            <button type="button" onclick="location.href='{% url 'Book' %}'" class="btn btn-success">Book</button>
             {% endif %}
             <button type="button" onclick="location.href='{% url 'reservation' %}'" class="btn btn-warning">Reserve
             </button>
