--- a/user/templates/user/login/dashboard.html
+++ b/user/templates/user/login/dashboard.html
@@ -1,2 +1,37 @@
-<button type="button" onclick="location.href='{% url 'available-server' %}'" class="btn btn-warning">Available Server
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+     body {
+        background-color: #d5e1df;
+        align-items: center;
+        margin: 10px;
+        padding: 2rem 1.5rem;
+        font: 1rem/1.5 "PT Sans", Arial, sans-serif;
+        color: #c4b7a6;
+      }
+
+    </style>
+    <meta charset="UTF-8">
+    <title>Server Availablity </title>
+</head>
+<body>
+
+<button type="button" onclick="location.href='{% url 'available-server' %}'" class="btn btn-info">Available Server
 </button>
+
+</body>
+</html>
+
+
