--- a/user/templates/user/login/login.html
+++ b/user/templates/user/login/login.html
@@ -2,6 +2,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+     <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
     <style>
 @import "compass/css3";
 
@@ -11,7 +21,7 @@ body {
 	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
   color:white;
   font-size:12px;
-  background:#333 url(/images/classy_fabric.png);
+  background:#d5e1df;
 }
 
 form {
