poosh popsh poshi posh poosh poshi moshi

--- a/user/templates/user/login/booked.html
+++ b/user/templates/user/login/booked.html
@@ -67,7 +67,7 @@
       <label class="form-label" for="customFile">Enter your Zip File</label>
     <input type="file"  class="form-control" name="file" aria-label="File browser example" />
 
-    <button type="submit" class="btn btn-danger">Upload</button>
+    <button type="submit" class="btn btn-danger" name="dataUpload"  value="{{internal_id}}">Upload</button>
     </form>
 
 
