--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -3,7 +3,7 @@
                 {% if site_url %}
                     <a href="{{ site_url }}">View Site</a> /
                 {% endif %}
-                    <a href="{% url 'monitor' %}">Monitor</a> /
+                    <a href="{% url 'graph' %}">Monitor</a> /
                 {% if user.is_active and user.is_staff %}
                     {% url 'django-admindocs-docroot' as docsroot %}
                     {% if docsroot %}
