--- a/user/templates/user/login/available_server.html
+++ b/user/templates/user/login/available_server.html
@@ -58,11 +58,14 @@ tr:nth-child(even) {
             {% if data.available == True %}
             <form method='post' action="Book">
                 {% csrf_token %}
-            <input  type="submit"  class="btn btn-success" name='internal-id' value="{{data.servername}}" ></input>
+            <button  type="submit"  class="btn btn-success" name='internal-id' value="{{data.servername}}" > Book Now</button>
             </form>
             {% endif %}
-            <button type="button" onclick="location.href='{% url 'reservation' %}'" class="btn btn-warning">Reserve
+            <form method="post" action="server-reservation">
+                {% csrf_token %}
+            <button  type="submit"  name="res-id" value="{{data.servername}}" class="btn btn-warning">Reserve
             </button>
+                </form>
         </td>
     </tr>
     {% endfor %}
