--- a/user/templates/user/login/login.html
+++ b/user/templates/user/login/login.html
@@ -168,7 +168,7 @@ label:hover ~ input[type=password] {
 
 </head>
 <body>
-<form method="post"  action="login">
+<form method="post"  action=''>
   {% csrf_token %}
   <h1>User Log in</h1>
   <div class="inset">
@@ -185,6 +185,7 @@ label:hover ~ input[type=password] {
     <label for="remember">Remember me for 14 days</label>
   </p>
   </div>
+    <div><p>{{ form.errors }}</p></div>
   <p class="p-container">
     <input type="submit" name="go" id="go" value="Log in">
   </p>
