--- a/user/templates/user/login/reservation.html
+++ b/user/templates/user/login/reservation.html
@@ -1,8 +1,17 @@
 
 
 
-<form action="server-reservation" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit">
+<form method="post">{% csrf_token %}
+
+  <input type="hidden" name="{{ form.server_id.html_name }}" value="{{ request.session.server }}">
+  <input type="hidden" name="{{ form.user_id.html_name }}" value="{{ request.user.id }}">
+  <input type="datetime-local" id="reservation_time" name="{{ form.reservation_time.html_name }}"><br>
+  {% for err in form.reservation_time.errors %}
+  {{ err }}
+  {% endfor %}<br>
+  <input type="datetime-local" id="end_time" name="{{ form.end_time.html_name }}"><br>
+  {% for err in form.end_time.errors %}
+  {{ err }}
+  {% endfor %}<br>
+  <input type="submit" value="Submit">
 </form>
