--- a/user/templates/user/login/available_server.html
+++ b/user/templates/user/login/available_server.html
@@ -44,22 +44,36 @@ tr:nth-child(even) {
 
 <table>
     <tr>
+                <th>Server ID</th>
+
         <th>Server Name</th>
         <th>Ram</th>
         <th>Processor</th>
+        <th>Server Status</th>
         <th>Availablity</th>
+
     </tr>
     {% for data in ServerData %}
     <tr>
+                <td> {{ data.server_id }}</td>
+
         <td> {{ data.servername }}</td>
         <td>{{ data.ram }}</td>
         <td>{{ data.processor }}</td>
         <td>{{ data.available }}</td>
+        <td>{% if data.status == 1 %}
+        {{ True }}
+            {% else %}
+            {{ False }}
+            {% endif %}
+
+        </td>
+
         <td>
-            {% if data.available == True %}
-            <form method='post' action="Book">
+            {% if data.status == True %}
+            <form method='post' action="{% url 'book-now' %}">
                 {% csrf_token %}
-                <button type="submit" class="btn btn-success" name='internal-id' value="{{ data.server_id }}"> Book Now
+                <button type="submit" class="btn btn-success" name='server' value="{{ data.server_id }}"> Book Now
                 </button>
             </form>
             {% endif %}
