--- a/user/templates/user/login/reservation.html
+++ b/user/templates/user/login/reservation.html
@@ -4,6 +4,7 @@
 <form method="post">{% csrf_token %}
 
   <input type="hidden" name="{{ form.server_id.html_name }}" value="{{ request.session.server }}">
+  <div><h3>Server Name: {{ request.session.server }}</h3></div>
   <input type="hidden" name="{{ form.user_id.html_name }}" value="{{ request.user.id }}">
   <input type="datetime-local" id="reservation_time" name="{{ form.reservation_time.html_name }}"><br>
   {% for err in form.reservation_time.errors %}
