--- a/user/templates/user/login/available_server.html
+++ b/user/templates/user/login/available_server.html
@@ -41,7 +41,7 @@ tr:nth-child(even) {
 </head>
 <body>
 <h2>Available Servers</h2>
-
+<button onclick="history.back()">Back</button>
 <table>
     <tr>
                 <th>Server ID</th>
