--- a/user/templates/user/login/reserved_servers.html
+++ b/user/templates/user/login/reserved_servers.html
@@ -40,6 +40,7 @@ tr:nth-child(even) {
     <title>Booked Servers </title>
 </head>
 <h1>Booked Servers</h1>
+<button onclick="history.back()">Back</button>
 <table>
 
     <tr>
