--- a/user/templates/user/login/booked.html
+++ b/user/templates/user/login/booked.html
@@ -98,6 +98,7 @@
     <title>Django</title>
   </head>
   <body>
+<button onclick="history.back()">Back</button>
 
   {% for message in messages %}
   <div>  <h3>{{ message }}</h3> </div>
