--- a/server/templates/monitor_page.html
+++ b/server/templates/monitor_page.html
@@ -4,7 +4,7 @@
 
 <h1>moniter page</h1>
 {% for g in graph %}
-<h1>{{ server_name|lookup:0 }}</h1>
+<h1>{{ server_name|lookup:forloop.counter0 }}</h1>
 <div style="width:600;height:500">
     {{ g|safe }}
     {% endfor %}
