--- a/user/templates/user/login/booked.html
+++ b/user/templates/user/login/booked.html
@@ -111,7 +111,7 @@ Server Name: {{ request.session.server }}
 <input type="checkbox" name="augmentation" value="aug">Augmentation
 </div>
 <div>
-<label for="l_box1"><input type="radio" name="model" value="yolov" id="l_box1">YOLOV</label>
+<label for="l_box1"><input type="radio" name="model" value="yolov" id="l_box1" checked>YOLO</label>
 <label for="d_box2"><input type="radio" name="model" value="mrcnn" id="d_box2">MRCNN</label>
 <label for="d_box3"><input type="radio" name="model" value="unet" id="d_box3">UNET</label>
 </div>
